--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "path": "^0.12.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
